@@ -6,6 +6,36 @@ This lists the user-visible changes made to Sawfish, and which releases
 they occurred between. For more detailed information see the
 @file{ChangeLog} files in the Sawfish source tree.
 
+@heading 1.5.0
+
+@itemize @bullet
+
+@item The 1.5.0 release has new features and bugfixes
+
+@item New/Updated requirements:
+@itemize @minus
+
+@item librep 0.17 -> 0.17.3
+
+@item rep-gtk 0.18.3 -> 0.18.4
+@end itemize
+
+@item New features:
+@itemize @minus
+
+@item Added ebuild [Harald van Dijk]
+@end itemize
+
+@item Other changes:
+@itemize @minus
+@item rep.m4 has been dropped use librep.pc/rep-gtk.pc instead [Christopher Bratusek]
+
+@item Added sawfish.pc [Christopher Bratusek]
+
+@item Improved Makefile's distclean rule [Christopher Bratusek]
+@end itemize
+@end itemize
+
 @heading 1.3.5
 
 @itemize @bullet
