@@ -1,0 +1,9 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: sawfish
+Description: The Sawfish X11 Window Manager
+Version: @version@
+Requires: librep rep-gtk
