@@ -3,6 +3,17 @@
 			bumped minimum librep to 0.17.3 and rep-gtk to 0.18.4,
 			since rep.m4 has been removed in favour of an improved librep.pc/rep-gtk.pc
 
+	* configure.in
+	* sawfish.ebuild.in: Added ebuild [Harald van Dijk]
+
+	* man/news.texi: Updated
+
+	* configure.in
+	* Makefile.in
+	* sawfish.pc.in: Added pc file for sawfish
+
+	* Makefile.in: Improved distclean rule
+
 2008-12-18  Christopher Bratusek <nano-master@gmx.de>
 	* lisp/sawfish/wm/gnome/integration.jl: invoke x-terminal-emulator instead of gnome-terminal [Christian Marillat] 
 
